--- a/app/src/component/css/productCard.css
+++ b/app/src/component/css/productCard.css
@@ -4,6 +4,7 @@
   overflow:hidden;
   position:relative;
   font-family: "Quicksand", serif;
+  border-radius: 6px;  
 }
 .product-card-content{
   width:100%;
