--- a/app/src/component/css/bottomHeader.css
+++ b/app/src/component/css/bottomHeader.css
@@ -41,7 +41,7 @@
   100%{
     height: 50px;
     width:1px;
-    transform: translate(10px, -400px); /* لتحريك الكلاس */
+    transform: translate(10px, -40vh); /* لتحريك الكلاس */
   }
 }
 @keyframes vertical{
@@ -69,22 +69,24 @@
 
 .bottom-header-content {
   width: 90%;
-  height: 100%;
+  height: 75%;
   margin: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-radius: 100px;
   background: #162D3A;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 10px;
   flex-direction: row; /* الوضع الافتراضي هو أفقي */
   transition: flex-direction 0.3s ease-in-out; /* الانتقال للتوجه */
 }
-
+.bottom-header-content.vertical{
+  height: 100%;
+}
 .bottom-header.vertical .bottom-header-content {
   flex-direction: column; /* تغيير التوجه للأيقونات لتكون عمودية */
   justify-content: flex-start; /* محاذاة الأيقونات لأعلى */
+  gap:10px;
 }
 
 .bottom-header-content-home,
@@ -98,7 +100,6 @@
   justify-content: center;
   align-items: center;
   border-radius: 100px;
-  margin-bottom: 10px; /* فاصلة بين الأيقونات */
   transition: margin 0.3s ease-in-out; /* إضافة انتقال للمسافات */
 }
 
@@ -107,11 +108,12 @@
 .wishlist-icon,
 .orders-icon,
 .profile-icon {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 16px;
   transition: all 0.3s ease-in-out; /* انتقال لكل خصائص الأيقونات */
 }
 
