--- a/app/src/component/css/homeProducts.css
+++ b/app/src/component/css/homeProducts.css
@@ -14,8 +14,9 @@
   width:100%;
   display:flex;
   align-items:center;
+  justify-content: space-between;
   flex-wrap:wrap;
-  gap: 10px;
+  gap: 5px;
 }
 .home-products-cube{
   max-width:100vw;
