--- a/app/src/page/css/product.css
+++ b/app/src/page/css/product.css
@@ -174,7 +174,7 @@
   background-color: white;
 }
 .product-bottom-header-content-price{
-  width:20%;
+  width:30%;
   height:100%;
   display:flex;
   align-items:center;
@@ -187,6 +187,14 @@
   font-weight:400;
   color : #777;
   font-family: "Quicksand", serif;
+}
+.already-in-cart{
+  font-size:14px;
+  font-weight:600;
+  color : #222;
+  font-family: "Quicksand", serif;
+  text-align: center;
+  margin-left: 20px;
 }
 .product-bottom-header-content-price-num{
   font-size:20px;
@@ -221,4 +229,45 @@
   justify-content:center;
   align-items:center;
   font-family: "Quicksand", serif;
+}
+
+
+
+
+/* تصميم الأساس لصندوق الألوان */
+.product-content-five-select-color {
+  display: flex;
+  gap: 15px;
+  padding: 10px;
+}
+
+/* تصميم الصناديق التي تمثل الألوان */
+.color-box {
+  width: 50px;
+  height: 50px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  border: 2px solid transparent;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+/* تأثير عند التمرير */
+.color-box:hover {
+  transform: scale(1.05);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+/* عند التحديد */
+.color-box.selected {
+  border-color: #162D3A; /* أزرق خفيف */
+  border-style: dashed;
+  padding: 5px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+.color-box-img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  border-radius: 5px;
 }
