--- a/app/src/page/css/checkout.css
+++ b/app/src/page/css/checkout.css
@@ -4,7 +4,7 @@
 .checkout-content{
   width:94vw;
   margin:auto;
-  
+  padding-bottom:100px;
 }
 .checkout-content-items-content-item {
   display: flex;
@@ -80,4 +80,24 @@
   color: #162D3A;
   margin-bottom: 10px;
   margin-top: 10px;
+}
+.checkout-content-button{
+  width: 96%;
+  height: 50px;
+  margin:auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 500;
+  font-family: "Quicksand", serif;
+  border-radius: 8px;
+  border: none;
+  background: #162D3A;
+  cursor: pointer;
+  color: #fff;
+  position: fixed;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
 }
