--- a/src/page/css/product.css
+++ b/src/page/css/product.css
@@ -273,3 +273,36 @@
   object-fit:cover;
   border-radius: 5px;
 }
+.product-content-six{
+  width:92%;
+  height:50px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  margin-top:40px;
+}
+.product-content-six-content{
+  width:100%;
+  height:100%;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background: #b26ae6;
+  border-radius: 8px;
+  color: #fff;
+  font-size:16px;
+  font-weight:600;
+  cursor: pointer;
+}
+.product-content-six-content-btn{
+  width:100%;
+  height:100%;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  border : none;
+  background: none;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+}
