product carousel ==> height

--- a/src/component/css/test.css
+++ b/src/component/css/test.css
@@ -1,6 +1,6 @@
 .instagram-story-container {
   width: 92%;
-  height:450px;
+  height:100%;
   margin: auto;
   border-radius:8px ;
   position: relative;
