--- a/src/component/css/test.css
+++ b/src/component/css/test.css
@@ -42,7 +42,7 @@
 }
 .story-image {
   width: 100%;
-  height: 100%;
+  height: 300px;
   object-fit: cover;
   transition: transform 1s ease; /* تأثير انتقال الانزلاق */
 }
