--- a/src/page/css/login.css
+++ b/src/page/css/login.css
@@ -4,7 +4,7 @@
 }
 .login{
   width: 100vw;
-  height: 100vh;
+  height: 120vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -112,7 +112,7 @@
 }
 .login-content-login{
   width: 100%;
-  height: 50px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -120,7 +120,8 @@
   font-weight: 500;
   font-family: "Quicksand", serif;
   color: #162D3A;
-  cursor: pointer;
+  border:none;
+  margin-top:10px;
 }
 .login-content-login a{
   text-decoration: underline;
