--- a/src/component/css/homeHeader.css
+++ b/src/component/css/homeHeader.css
@@ -8,24 +8,28 @@
 }
 .home-header-content{
   display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
   align-items: center;
-  width : 90%;
+  width : 94vw;
   height : 100%;
 }
 .home-header-content-greeting{
   display: flex;
   align-items: center;
-  width : 80%;
+  width : 90%;
   height : 100%;
   font-family: "Quicksand", serif;
   font-size:20px;
   font-weight:700;
+  text-align: right;
+  direction: rtl;
 }
 .home-header-content-notification{
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  width : 30%;
+  width : 12%;
   height : 100%;
 }
 .home-header-content-notification-bg{
