--- a/src/component/css/productCard.css
+++ b/src/component/css/productCard.css
@@ -101,13 +101,14 @@
   font-weight: 500;
   color: #333;
   display: flex;
-  flex-direction: column;
+  flex-direction: row-reverse;
   align-items: flex-start;
   gap: 4px;
+  
 }
 
 .product-card-content-old-price {
-  font-size: 14px;
+  font-size: 12px;
   color: #999;
   text-decoration: line-through;
 }
@@ -116,4 +117,5 @@
   font-size: 16px;
   font-weight: 600;
   color: #e74c3c; /* لون أحمر لجذب الانتباه للسعر الجديد */
+  margin-bottom: 10px;
 }
